fix mongo connection string

--- a/terraform/templates/container_definition.json.tmpl
+++ b/terraform/templates/container_definition.json.tmpl
@@ -35,6 +35,10 @@
     {
       "name": "WRI_MAIL_RECIPIENTS",
       "value": "${wri_mail_recipients}"
+    },
+    {
+      "name": "DB_NAME",
+      "value": "${db_name}"
     }
   ],
   "secrets": [
