Update env vars to match App Env vars in TF

--- a/terraform/templates/container_definition.json.tmpl
+++ b/terraform/templates/container_definition.json.tmpl
@@ -9,36 +9,56 @@
       "value": "${environment}"
     },
     {
-      "name": "LOG_LEVEL",
-      "value": "${log_level}"
-    },
-     {
-      "name": "BUCKET",
-      "value": "${data_bucket}"
+      "name" : "PORT",
+      "value" : "${container_port}"
     },
     {
-      "name": "REDIS_ENDPOINT",
-      "value": "${redis_endpoint}"
+      "name" : "NODE_PATH",
+      "value" : "${node_path}"
     },
     {
-      "name": "TARGET_SHEET_ID",
-      "value": "${target_sheet_id}"
+      "name" : "NODE_ENV",
+      "value" : "${node_env}"
     },
     {
-      "name": "LEGACY_TEMPLATE_ID",
-      "value": "${legacy_template_id}"
+      "name" : "MONGO_PORT_27017_TCP_ADDR",
+      "value" : "${mongo_port_27017_tcp_addr}"
     },
     {
-      "name": "DEFAULT_TEMPLATE_ID",
-      "value": "${default_template_id}"
+      "name" : "CT_URL",
+      "value" : "${ct_url}"
     },
     {
-      "name": "WRI_MAIL_RECIPIENTS",
-      "value": "${wri_mail_recipients}"
+      "name" : "LOCAL_URL",
+      "value" : "${local_url}"
     },
     {
-      "name": "DB_NAME",
-      "value": "${db_name}"
+      "name" : "TEAMS_API_URL",
+      "value" : "${teams_api_url}"
+    },
+    {
+      "name" : "AREAS_API_URL",
+      "value" : "${areas_api_url}"
+    },
+    {
+      "name" : "WRI_MAIL_RECIPIENTS",
+      "value" : "${wri_mail_recipients}"
+    },
+    {
+      "name" : "TARGET_SHEET_ID",
+      "value" : "${target_sheet_id}"
+    },
+    {
+      "name" : "S3_ACCESS_KEY_ID",
+      "value" : "${s3_access_key_id}"
+    },
+    {
+      "name" : "S3_SECRET_ACCESS_KEY",
+      "value" : "${s3_secret_access_key}"
+    },
+    {
+      "name" : "S3_BUCKET",
+      "value" : "${s3_bucket}"
     }
   ],
   "secrets": [
