Update terraform, add logger_level variable to container

--- a/terraform/templates/container_definition.json.tmpl
+++ b/terraform/templates/container_definition.json.tmpl
@@ -33,6 +33,10 @@
       "value" : "${local_url}"
     },
     {
+      "name" : "LOGGER_LEVEL",
+      "value" : "${logger_level}"
+    },
+    {
       "name" : "TEAMS_API_URL",
       "value" : "${teams_api_url}"
     },
