update terraform etc

--- a/terraform/templates/container_definition.json.tmpl
+++ b/terraform/templates/container_definition.json.tmpl
@@ -37,6 +37,10 @@
       "value" : "${areas_api_url}"
     },
     {
+      "name" : "API_API_URL",
+      "value" : "${api_api_url}"
+    },
+    {
       "name" : "WRI_MAIL_RECIPIENTS",
       "value" : "${wri_mail_recipients}"
     },
