Deleting report answers

--- a/terraform/templates/container_definition.json.tmpl
+++ b/terraform/templates/container_definition.json.tmpl
@@ -33,6 +33,10 @@
       "value" : "${teams_api_url}"
     },
     {
+      "name" : "V3_TEAMS_API_URL",
+      "value" : "${v3_teams_api_url}"
+    },
+    {
       "name" : "AREAS_API_URL",
       "value" : "${areas_api_url}"
     },
