Added microservice secret and username to all answers response

--- a/terraform/templates/container_definition.json.tmpl
+++ b/terraform/templates/container_definition.json.tmpl
@@ -77,7 +77,11 @@
     {
       "name": "GOOGLE_PROJECT_EMAIL",
        "valueFrom": "${google_project_email}"
-    }
+    },
+    {
+      "name": "MICROSERVICE_TOKEN",
+      "valueFrom": "${microservice_token_secret}"
+    },
   ],
   "portMappings": [
     {
