--- a/terraform/templates/container_definition.json.tmpl
+++ b/terraform/templates/container_definition.json.tmpl
@@ -45,6 +45,10 @@
       "value" : "${api_api_url}"
     },
     {
+      "name": "USERS_API_URL",
+      "value": "${USERS_API_URL}"
+    },
+    {
       "name" : "WRI_MAIL_RECIPIENTS",
       "value" : "${wri_mail_recipients}"
     },
